<resources>
    <string name="app_name">Employee Management System</string>

    <!-- General Strings -->
    <string name="required">Required</string>
    <string name="error">"Error:- "</string>
    <string name="please_enter_required_fields">Please Enter Required Fields</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>

    <!-- Login Activity Strings -->
    <string name="password">Password</string>
    <string name="not_a_member_sign_up">Not a member? Sign up</string>
    <string name="login">Login</string>
    <string name="sign_in_with_yahoo">Sign in with Yahoo</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="loged_in_successful">Loged in Successful</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="rest_password_dialog_title">Rest Password</string>
    <string name="enter_your_email_to_receive_reset_link_dialog_message">Enter Your Email To Receive Reset Link</string>
    <string name="reset_link_send_to_your_email">Reset Link Send To Your Email</string>

    <!-- Sign Up Activity Strings -->
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="designation">Designation</string>
    <string name="password_not_matched">Password Not Matched</string>
    <string name="successfully_registered_part1">Successful Registered</string>
    <string name="successfully_registered_part2">\n Please wait you will automaticly go to Login page ...</string>
    <string name="joining_date">Joining Date</string>
    <string-array name="position_array">
        <item>Engineer</item>
        <item>Technical</item>
    </string-array>

    <!-- Main Menu Strings -->
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>

    <!-- User Main Strings -->
    <string name="vacations_departure_details">Vacations &amp; Departure Details</string>
    <string name="vacation_departure_request">Vacation &amp; Departure Request</string>
    <string name="salary_slip">Salary Slip</string>

    <!-- Settings Strings -->
    <string name="change_password">Change Password</string>
    <string name="change_language">Change Language</string>
    <string name="edit_phone">Edit Phone</string>
    <string name="phone">Phone</string>
    <string name="new_password">New Password</string>
    <string name="password_changed_successfully">Password Changed Successfully</string>
    <string name="successfully_edit_phone">Phone Changed Successfully</string>

    <!-- Vacation & Departure Request Strings -->
    <string name="request_type">Request Type</string>
    <string name="vacation_date">Vacation Date:-</string>
    <string name="choose_date">Choose Date</string>
    <string name="departure_time">Departure Time:-</string>
    <string name="choose_time_from">From</string>
    <string name="choose_time_to">To</string>
    <string name="departure_date">Departure Date:-</string>
    <string name="submit">Submit</string>
    <string name="under_review">Under Review</string>
    <string name="not_choose_request_message">Please Choose A Request!</string>
    <string name="update_vacation_message">You submitted this date before, if you want change the date please choose new date Or press delete to delete the vacation ...</string>
    <string name="update_departure_message">You submitted at this date before, if you want change the date/time please choose new date/time Or press delete to delete the departure ...</string>
    <string name="delete">Delete</string>
    <string name="successfully_update_date">Date has been modified</string>
    <string name="save">Save</string>
    <string name="delete_vacation">Vacation has been deleted</string>
    <string name="delete_departure">Departure has been deleted</string>
    <string name="submit_vacation_before">You submitted this date before</string>
    <string name="vacation_details">Vacation Details</string>
    <string name="departure_details">Departure Details</string>
    <string name="submit_date">Submit Date</string>
    <string name="status">Status:-</string>
    <string name="update">Update</string>
    <string-array name="request_type_spin">
        <item>Choose Type</item>
        <item>Vacation</item>
        <item>Departure</item>
    </string-array>

</resources>