<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="@drawable/general_baackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_profile"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/Settings_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:fontFamily="@font/adamina"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_margin="20dp"/>

        <TextView
            android:id="@+id/Settings_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:fontFamily="@font/adamina"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_margin="20dp"/>

        <TextView
            android:id="@+id/Settings_Joining_Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/joining_date"
            android:textSize="20sp"
            android:fontFamily="@font/adamina"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_margin="20dp"/>

        <TextView
            android:id="@+id/Settings_Designation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/designation"
            android:textSize="20sp"
            android:fontFamily="@font/adamina"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_margin="20dp"/>

        <TextView
            android:id="@+id/Settings_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="20sp"
            android:fontFamily="@font/adamina"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_margin="20dp"/>

        <TextView
            android:id="@+id/Change_Password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/change_password"
            android:background="@drawable/edit_text_style"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/textdark"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/Change_Language"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/change_language"
            android:background="@drawable/edit_text_style"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/textdark"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/Edit_Phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/edit_phone"
            android:background="@drawable/edit_text_style"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/textdark"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"/>

        </LinearLayout>
</ScrollView>