<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="50dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rest_password_dialog_title"
        android:layout_margin="20dp"
        android:textSize="25sp"
        android:fontFamily="@font/adamina"
        android:textColor="@color/textdark"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_email_to_receive_reset_link_dialog_message"
        android:layout_margin="10dp"
        android:textSize="15sp"
        android:fontFamily="@font/adamina"
        android:textColor="@color/textdark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Rest_Email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:layout_margin="10dp"
        android:paddingStart="10dp"
        android:textSize="15sp"
        android:fontFamily="@font/adamina"
        android:textColor="@color/textdark"
        android:inputType="textEmailAddress" />

</LinearLayout>