<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/splash_screen">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:background="#88888888"
            android:elevation="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_margin="30dp"
                android:textSize="35sp"
                android:fontFamily="@font/adamina"
                android:textColor="@color/textLight"
                android:textStyle="bold"
                android:gravity="center"/>

            <LinearLayout
                android:id="@+id/Login_By_Google"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="#88888888"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_google"
                    android:layout_gravity="center" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_with_google"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"
                    android:textColor="@color/textdark"
                    android:fontFamily="@font/adamina"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Login_By_Yahoo"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="#88888888"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_yahoo"
                    android:layout_gravity="center" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/adamina"
                    android:text="@string/sign_in_with_yahoo"
                    android:textColor="@color/textdark"
                    android:textSize="16sp"/>

            </LinearLayout>


            <EditText
                android:id="@+id/Login_Email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:layout_margin="10dp"
                android:paddingStart="10dp"
                android:textSize="20sp"
                android:fontFamily="@font/adamina"
                android:textColor="@color/textdark"
                android:inputType="textEmailAddress"
                android:background="@drawable/edit_text_style"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                android:layout_margin="10dp">
                <EditText
                    android:id="@+id/Login_Password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/password"
                    android:paddingStart="10dp"
                    android:textSize="20sp"
                    android:fontFamily="@font/adamina"
                    android:textColor="@color/textdark"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_text_style" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/Login_Btn"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:background="@color/buttonBox"
                    android:text="@string/login"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/textdark"
                    android:fontFamily="@font/adamina"/>
                <Button
                    android:id="@+id/Login_Cancel_Btn"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:background="@color/buttonBox"
                    android:layout_marginStart="20dp"
                    android:text="@string/cancel"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/textdark"
                    android:fontFamily="@font/adamina"/>
            </LinearLayout>

            <TextView
                android:id="@+id/Forget_Password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/forget_password"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/textdark"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/Signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/not_a_member_sign_up"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/textdark"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>